Update environment variables and metadata

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,8 @@ NEXT_PUBLIC_AUDIENCE_ID=
 
 # Website Name it will be used on everywhere
 NEXT_PUBLIC_SITE_NAME="Website Name"
+#used in meta tags
+NEXT_PUBLIC_SITE_DESCRIPTION="Website Description"
 # Website Domain it will be used on everywhere
 NEXT_PUBLIC_DOMAIN="https://www.example.com"
 
