Update email configuration

--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,7 @@ NEXT_PUBLIC_DOMAIN="https://www.example.com"
 NEXT_PUBLIC_LOGO="https://i.ibb.co/37JQcmJ/Frame-42.png"
 
 # Email Configuration
-NEXT_PUBLIC_FROM_EMAIL="onboard@aihunts.com"
+NEXT_PUBLIC_FROM_EMAIL=""
 
 # Social Media Links
 NEXT_PUBLIC_LINKEDIN=""
