Update environment variables, enhance EmailForm, and refactor components
- Updated .env.example with new variables for launch date, title, offer details, and privacy policy.
- Enhanced EmailForm to include full name input and improved submission handling.
- Refactored CardHeader and CardFooter components, removing unused files.
- Updated README.md for clearer instructions and added a new section for environment variables.
- Adjusted Tailwind CSS configuration for better theming support.
- Removed package-lock.json as part of the cleanup process.

--- a/.env.example
+++ b/.env.example
@@ -20,10 +20,17 @@ NEXT_PUBLIC_LINKEDIN=""
 NEXT_PUBLIC_TWITTER=""
 NEXT_PUBLIC_GITHUB=""
 
-# Modify the following variables to change the content of the landing page
-# Hero Title
-NEXT_PUBLIC_HERO_TITLE="We are coming Soon"
+# Modify the following variables to change the content of the landing page ------
+# Launch Date
+NEXT_PUBLIC_LAUNCH_DATE="2025-12-01"
+# Title
+NEXT_PUBLIC_TITLE="Join the waitlist for the SAAS code library."
 # Hero Subtitle
-NEXT_PUBLIC_HERO_SUBTITLE="An AI directory for digital nomads"
+NEXT_PUBLIC_OFFER_TITLE="Exclusive 33% launch discount for waitlist members, three days only."
+# Offer Price optional
+NEXT_PUBLIC_CURRENT_PRICE="150"
+NEXT_PUBLIC_DISCOUNT_PRICE="299"
+# Features
+NEXT_PUBLIC_FEATURES="Feature 1, Feature 2, Feature 3, Feature 4"
 # Privacy Policy
-NEXT_PUBLIC_PRIVACY="Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente quos ex tenetur accusamus nisi consectetur nam iure ducimus voluptatum dolores ullam eveniet, odio numquam non voluptatem dolor delectus perspiciatis aspernatur."
+NEXT_PUBLIC_PRIVACY="Your privacy is important to us. When you sign up, we collect personal information such as your name and email address. This information is used solely to provide you with our services and to communicate with you regarding your account. We do not share your information with third parties without your consent, except as required by law. By signing up, you agree to our privacy practices. You can review our full privacy policy on our website for more details."
